[gd_scene load_steps=8 format=2]

[ext_resource path="res://menu/screentitle.png" type="Texture" id=1]
[ext_resource path="res://credits/backbutton.png" type="Texture" id=2]
[ext_resource path="res://play/drawacardbutton.png" type="Texture" id=3]
[ext_resource path="res://play/play.gd" type="Script" id=4]
[ext_resource path="res://cards/cardstiles/.tres" type="TileSet" id=5]
[ext_resource path="res://cards/newcardbutton.png" type="Texture" id=6]
[ext_resource path="res://cards/menubutton.png" type="Texture" id=7]

[node name="play" type="Node2D"]
script = ExtResource( 4 )

[node name="screentitle" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="draw" type="Button" parent="screentitle"]
margin_left = -142.0
margin_top = -123.0
margin_right = 147.0
margin_bottom = -2.0
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cards" type="TileMap" parent="screentitle/draw"]
position = Vector2( -370, -177 )
mode = 2
tile_set = ExtResource( 5 )
cell_size = Vector2( 1, 1 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1

[node name="newcard" type="Button" parent="screentitle/draw/cards"]
margin_left = 718.0
margin_top = 177.0
margin_right = 1007.0
margin_bottom = 298.0
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Button" parent="screentitle/draw/cards"]
margin_left = 717.0
margin_top = 370.0
margin_right = 1006.0
margin_bottom = 491.0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="screentitle"]
margin_left = -143.0
margin_top = 74.0
margin_right = 146.0
margin_bottom = 195.0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="screentitle/draw" to="." method="_on_draw_pressed"]
[connection signal="pressed" from="screentitle/draw/cards/newcard" to="." method="_on_newcard_pressed"]
[connection signal="pressed" from="screentitle/draw/cards/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="screentitle/back" to="." method="_on_back_pressed"]
